--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,33 +1,19 @@
-# set scroll history to 100,000 lines
-set-option -g history-limit 100000
-
-# modern colors
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",alacritty:Tc"
-
-# unbind the prefix and bind it to Ctrl-a like screen
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
-
-# Avoid ESC delay
-set -s escape-time 0
-
-# Fix titlebar
-set -g set-titles on
-set -g set-titles-string "#T"
+set-option -g prefix C-a
+bind-key C-a send-prefix
+bind v split-window -h
+bind s split-window -v
+unbind '"'
+unbind %
+bind r source-file ~/.tmux.conf
+bind h select-pane -L
+bind i select-pane -R
+bind n select-pane -D
+bind e select-pane -U
+set -g mouse on
 
 # VIM mode
 set -g mode-keys vi
-
-# Mouse friendly
-set -g mouse on
-
-# Move between panes with vi keys
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
 bind -T copy-mode-vi v send -X begin-selection
@@ -37,3 +23,45 @@ bind -T copy-mode-vi Enter send-keys -X cancel
 # shortcut for moving tmux buffer to clipboard
 # useful if you've selected with the mouse
 bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
+
+
+##################
+# VISUAL CHANGES #
+##################
+# loud or quiet?
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+#  modes
+setw -g clock-mode-colour colour5
+setw -g mode-style 'fg=colour1 bg=colour18 bold'
+# panes
+set -g pane-border-style 'fg=colour19 bg=colour0'
+set -g pane-active-border-style 'bg=colour0 fg=colour9'
+# statusbar
+set -g status-position bottom
+set -g status-justify left
+set -g status-style 'bg=colour18 fg=colour137 dim'
+set -g status-left ''
+set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
+set -g status-right-length 50
+set -g status-left-length 20
+#
+setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
+setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
+#
+setw -g window-status-style 'fg=colour9 bg=colour18'
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+#
+setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+# messages
+set -g message-style 'fg=colour232 bg=colour16 bold'
+set -g xterm-keys on
+set -g escape-time 0
+# Start windows and tabs at 1 because 0 is not next to 1
+set -g base-index 1
+setw -g pane-base-index 1
+set-option -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",alacritty:Tc"
