--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -4,15 +4,6 @@ add_newline = false
 [line_break]
 disabled = true
 
-## Replace the "❯" symbol in the prompt with "➜"
-#[character]                            # The name of the module we are configuring is "character"
-#success_symbol = "[➜](bold green)"     # The "suc
-
-[package]
-disabled = true
-
-[cmd_duration]
-disabled = true
-
-[rust]
-disabled = true
+# Replace the "❯" symbol in the prompt with "➜"
+## [character]                            # The name of the module we are configuring is "character"
+## success_symbol = "[➜](bold green)"     # The "suc
