--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,9 +7,9 @@ unbind '"'
 unbind %
 bind r source-file ~/.tmux.conf
 bind h select-pane -L
-bind i select-pane -R
-bind n select-pane -D
-bind e select-pane -U
+bind l select-pane -R
+bind j select-pane -D
+bind k select-pane -U
 set -g mouse on
 
 # VIM mode
@@ -44,7 +44,6 @@ set -g pane-active-border-style 'bg=colour0 fg=colour9'
 set -g status-position bottom
 set -g status-justify left
 set -g status-style 'bg=colour18 fg=colour137 dim'
-set -g status-left ''
 set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
@@ -63,5 +62,5 @@ set -g escape-time 0
 # Start windows and tabs at 1 because 0 is not next to 1
 set -g base-index 1
 setw -g pane-base-index 1
-set-option -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",alacritty:Tc"
+set-option -g default-terminal "tmux-256color" # Linux
+# set-option -g default-terminal "screen-256color" # Mac
