tweak tmux and zsh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ bind j select-pane -D
 bind k select-pane -U
 set -g mouse on
 
+bind-key -r S run-shell "tmux new-session -d"
+
 # VIM mode
 set -g mode-keys vi
 
