--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,7 @@ bind k select-pane -U
 set -g mouse on
 
 bind-key -r S run-shell "tmux new-session -d"
+bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
 
 # VIM mode
 set -g mode-keys vi
