--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -13,7 +13,9 @@ set -g status-style 'bg=#333333 fg=#5eacd3'
 set -s escape-time 0
 set -g base-index 1
 setw -g pane-base-index 1
-set-option -g default-terminal "screen-256color" # Mac
+# set-option -g default-terminal "screen-256color" # Mac
+set -g default-terminal "tmux-256color" # Linux
+set -ag terminal-overrides ",xterm-256color:RGB" #Linux
 
 bind-key -r S run-shell "tmux new-session -d"
 bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
