--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -88,54 +88,39 @@ env:
 
 # Font configuration
 font:
-  # Normal (roman) font face
   normal:
-    # Font family
-    #
-    # Default:
-    #   - (macOS) Menlo
-    #   - (Linux/BSD) monospace
-    #   - (Windows) Consolas
-    family: FiraCode Nerd Font Mono
-
-    # The `style` can be specified to pick a specific face.
+    # family: SourceCodePro
+    # family: FiraCode Nerd Font
+    # family: Mononoki Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Regular
 
   # Bold font face
   bold:
-    # Font family
-    #
-    # If the bold family is not specified, it will fall back to the
-    # value specified for the normal font.
-    family: FiraCode Nerd Font Mono
-
-    # The `style` can be specified to pick a specific face.
+    # family: SourceCodePro
+    # family: FiraCode Nerd Font
+    # family: Mononoki Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold
 
   # Italic font face
   italic:
-    # Font family
-    #
-    # If the italic family is not specified, it will fall back to the
-    # value specified for the normal font.
-    family: FiraCode Nerd Font Mono
-
-    # The `style` can be specified to pick a specific face.
+    # family: SourceCodePro
+    # family: FiraCode Nerd Font
+    # family: Mononoki Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Italic
 
   # Bold italic font face
   bold_italic:
-    # Font family
-    #
-    # If the bold italic family is not specified, it will fall back to the
-    # value specified for the normal font.
-    family: FiraCode Nerd Font Mono
-
-    # The `style` can be specified to pick a specific face.
+    # family: SourceCodePro
+    # family: FiraCode Nerd Font
+    # family: Mononoki Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold Italic
 
   # Point size
-  size: 13.0
+  size: 12.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
