--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -18,7 +18,7 @@ map kitty_mod+9 goto_tab 9
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode Nerd Font Mono
+font_family      JetBrains Mono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
