--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -89,38 +89,38 @@ env:
 # Font configuration
 font:
   normal:
-    # family: SourceCodePro
+    family: SauceCodePro Nerd Font
     # family: FiraCode Nerd Font
     # family: Mononoki Nerd Font
-    family: JetBrainsMono Nerd Font
+    # family: JetBrainsMono Nerd Font
     style: Regular
 
   # Bold font face
   bold:
-    # family: SourceCodePro
+    family: SauceCodePro Nerd Font
     # family: FiraCode Nerd Font
     # family: Mononoki Nerd Font
-    family: JetBrainsMono Nerd Font
+    # family: JetBrainsMono Nerd Font
     style: Bold
 
   # Italic font face
   italic:
-    # family: SourceCodePro
+    family: SauceCodePro Nerd Font
     # family: FiraCode Nerd Font
     # family: Mononoki Nerd Font
-    family: JetBrainsMono Nerd Font
+    # family: JetBrainsMono Nerd Font
     style: Italic
 
   # Bold italic font face
   bold_italic:
-    # family: SourceCodePro
+    family: SauceCodePro Nerd Font
     # family: FiraCode Nerd Font
     # family: Mononoki Nerd Font
-    family: JetBrainsMono Nerd Font
+    # family: JetBrainsMono Nerd Font
     style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 15.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
