kitty colors and fish cursor

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -646,12 +646,49 @@ font_size        16.0
 
 #: Color scheme {{{
 
-foreground #d5c4a1
-background #000001
-
-#: The foreground and background colors
+ # DOOM ONE
+foreground #bbc2cf
+background #282c34
 
 background_opacity 0.9
+
+#: black
+color0 #1c1f24
+color8 #5b6268
+
+#: red
+color1 #ff6c6b
+color9 #da8548
+
+#: green
+color2  #98be65
+color10 #4db5bd
+
+#: yellow
+
+color3  #da8548
+color11 #ecbe7b
+
+#: blue
+
+color4  #51afef
+color12 #3071db
+
+#: magenta
+
+color5  #c678dd
+color13 #a9a1e1
+
+#: cyan
+
+color6  #5699af
+color14 #46d9ff
+
+#: white
+
+color7  #dfdfdf
+color15 #f8f8f2
+
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
