--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -1,9 +1,26 @@
+# i3blocks config file changed for EndeavourOS-i3 setup
+
+# source is available here:
+# https://raw.githubusercontent.com/endeavouros-team/endeavouros-i3wm-setup/main/.config/i3/i3blocks.conf
+# Maintainer: joekamprad [joekamprad@endeavouros.com]
+# Former Visual Designer: Florent Valetti [@FLVAL EndeavourOS]
+# created for i3wm setup on EndeavourOS
+# https://endeavouros.com
+
+# cheatsheet for icon fonts used on the block-bar:
+# https://fontawesome.com/v4.7/cheatsheet/
+
+# --> to update this run the following command:
+# wget --backups=1 https://raw.githubusercontent.com/endeavouros-team/endeavouros-i3wm-setup/main/.config/i3/i3blocks.conf -P ~/.config/i3/
+
+# Please see man i3blocks for a complete reference!
+# The man page is also hosted at http://vivien.github.io/i3blocks
+
+
 # List of valid properties:
 #
 # align
 # color
-# background
-# border
 # command
 # full_text
 # instance
@@ -20,50 +37,114 @@
 # Global properties
 #
 # The top properties below are applied to every block, but can be overridden.
-separator_block_width=15
-markup=none
-
-[CPU]
-label= 
-#command=ps -eo pcpu,comm | sort -k 1 -nr | head -1
-command=ps -Ao pcpu,comm --sort=-pcpu --no-headers | head -n 1
-interval=2
-
-[CPU]
-label= 
-command=sensors | grep "Core 0" | awk '{print $3}'
-interval=10
-
-[Kernel]
-label= 
-command=uname -r
-interval=once
-
-[memory]
-label=
 separator=false
+markup=pango
+
+[terminal]
+full_text= 
+color=#807dfe
+command=kitty
+
+[browser]
+full_text= 
+color=#ff7f81
+command=firefox
+
+[files]
+full_text= 
+color=#7f3fbf
+command=thunar ~/
+
+#[mail]
+#full_text= 
+#color=#dbcb75
+#command=thunderbird
+
+[simple-2]
+full_text=: :
+color=#717171
+
+# Disk usage
+#
+# The directory defaults to $HOME if the instance is not specified.
+# The script may be called with a optional argument to set the alert
+# (defaults to 10 for 10%).
+[disk]
+label=   
+instance=/
+command=~/.config/i3/scripts/disk
 interval=30
 
-# Battery indicator
-[battery]
-# label=BAT
-command=acpi -b | grep -E -o '[0-9][0-9]?%'
-label= 
-instance=0
-interval=10
-
-# Volume indicator
-[volume]
-label=墳 
-instance=Master
-command=amixer get Master | grep % | awk '{print $5}' | sed 's/[^0-9\%]//g' | head -n1
-#instance=PCM
-interval=1
-signal=10
-
-# Date Time
+# Memory usage
 #
+# The type defaults to "mem" if the instance is not specified.
+[memory]
+label= 
+command=~/.config/i3/scripts/memory
+interval=2
+
+[cpu_usage]
+label= 
+command=~/.config/i3/scripts/cpu_usage
+#min_width=CPU: 100.00%
+interval=2
+
+[CPU-temperature]
+label=
+command=~/.config/i3/scripts/temperature
+interval=30
+#T_WARN=70
+#T_CRIT=90
+#SENSOR_CHIP=""
+# where SENSOR_CHIP can be find with sesnors output
+# can be used also for GPU temperature or other temperature sensors lm-sensors detects.
+
+# showing name of connected network (enable for wifi use)
+#[net]
+#label=
+#command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
+#interval=30
+
+[bandwidth]
+command=~/.config/i3/scripts/bandwidth2
+interval=persist
+
+# Battery indicator
+#
+# The battery instance defaults to 0.
+[battery]
+command=~/.config/i3/scripts/battery.sh
+# change this to battery-pinebook-pro.sh if you are running on pinebook-pro
+label= 
+#instance=1
+interval=30
+
+[simple-2]
+full_text=: :
+color=#717171
+
+[pavucontrol]
+full_text=
+command=pavucontrol
+
+[volume-pulseaudio]
+command=~/.config/i3/scripts/volume
+instance=Master
+interval=1
+
+[keybindings]
+full_text=
+command=~/.config/i3/scripts/keyhint.sh
+
 [time]
-label= 
-command=date '+%Y-%m-%d %H:%M'
-interval=5
+#label= 
+command=date '+%a %d %b %H:%M'
+interval=1
+
+[shutdown_menu]
+full_text=   
+command=~/.config/i3/scripts/powermenu
+
+[simple-2]
+full_text=: :
+color=#717171
