--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -105,9 +105,9 @@ interval=30
 #command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
 #interval=30
 
-[bandwidth]
-command=~/.config/i3/scripts/bandwidth2
-interval=persist
+# [bandwidth]
+# command=~/.config/i3/scripts/bandwidth2
+# interval=persist
 
 # Battery indicator
 #
