--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -43,7 +43,7 @@ markup=pango
 [terminal]
 full_text= 
 color=#807dfe
-command=kitty
+command=xfce4-terminal
 
 [browser]
 full_text= 
@@ -70,7 +70,7 @@ color=#717171
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=   
+label=
 instance=/
 command=~/.config/i3/scripts/disk
 interval=30
@@ -79,12 +79,12 @@ interval=30
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label= 
+label=
 command=~/.config/i3/scripts/memory
 interval=2
 
 [cpu_usage]
-label= 
+label=
 command=~/.config/i3/scripts/cpu_usage
 #min_width=CPU: 100.00%
 interval=2
@@ -96,7 +96,7 @@ interval=30
 #T_WARN=70
 #T_CRIT=90
 #SENSOR_CHIP=""
-# where SENSOR_CHIP can be find with sesnors output
+# where SENSOR_CHIP can be find with sensors output
 # can be used also for GPU temperature or other temperature sensors lm-sensors detects.
 
 # showing name of connected network (enable for wifi use)
@@ -105,18 +105,16 @@ interval=30
 #command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
 #interval=30
 
-# [bandwidth]
-# command=~/.config/i3/scripts/bandwidth2
-# interval=persist
+[bandwidth]
+command=~/.config/i3/scripts/bandwidth2
+interval=persist
 
 # Battery indicator
-#
-# The battery instance defaults to 0.
 [battery]
-command=~/.config/i3/scripts/battery.sh
-# change this to battery-pinebook-pro.sh if you are running on pinebook-pro
-label= 
-#instance=1
+command=~/.config/i3/scripts/battery2
+# for alternative battery script  change to battery1
+# change this to battery-pinebook-pro if you are running on pinebook-pro
+label=
 interval=30
 
 [simple-2]
@@ -132,17 +130,24 @@ command=~/.config/i3/scripts/volume
 instance=Master
 interval=1
 
+# display keyboard layout name
+# for keyboard layouts switcher
+# see i3 config file
+#[keyboard-layout]
+#command=~/.config/i3/scripts/keyboard-layout
+#interval=2
+
 [keybindings]
 full_text=
-command=~/.config/i3/scripts/keyhint.sh
+command=~/.config/i3/scripts/keyhint
 
 [time]
-#label= 
-command=date '+%a %d %b %H:%M'
+#label=
+command=date '+%a %d %b %H:%M:%S'
 interval=1
 
 [shutdown_menu]
-full_text=   
+full_text=
 command=~/.config/i3/scripts/powermenu
 
 [simple-2]
