--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -43,12 +43,12 @@ markup=pango
 [terminal]
 full_text= 
 color=#807dfe
-command=xfce4-terminal
+command=kitty
 
 [browser]
 full_text= 
 color=#ff7f81
-command=firefox
+command=brave
 
 [files]
 full_text= 
@@ -143,7 +143,7 @@ command=~/.config/i3/scripts/keyhint
 
 [time]
 #label=
-command=date '+%a %d %b %H:%M:%S'
+command=date '+%a %d %b %H:%M'
 interval=1
 
 [shutdown_menu]
