tmux nvim option

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,6 +11,7 @@ bind r source-file ~/.config/tmux/tmux.conf
 set -g mouse on
 set -g status-style 'bg=#333333 fg=#5eacd3'
 set -s escape-time 0
+set-option -g focus-events on
 set -g base-index 1
 setw -g pane-base-index 1
 set -g default-terminal "tmux-256color"
