--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -90,33 +90,33 @@ env:
 font:
   normal:
     # family: SauceCodePro Nerd Font
-    family: FiraCode Nerd Font
+    # family: FiraCode Nerd Font
     # family: Mononoki Nerd Font
-    # family: JetBrainsMono Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Regular
 
   # Bold font face
   bold:
     # family: SauceCodePro Nerd Font
-    family: FiraCode Nerd Font
+    # family: FiraCode Nerd Font
     # family: Mononoki Nerd Font
-    # family: JetBrainsMono Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold
 
   # Italic font face
   italic:
     # family: SauceCodePro Nerd Font
-    family: FiraCode Nerd Font
+    # family: FiraCode Nerd Font
     # family: Mononoki Nerd Font
-    # family: JetBrainsMono Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Italic
 
   # Bold italic font face
   bold_italic:
     # family: SauceCodePro Nerd Font
-    family: FiraCode Nerd Font
+    # family: FiraCode Nerd Font
     # family: Mononoki Nerd Font
-    # family: JetBrainsMono Nerd Font
+    family: JetBrainsMono Nerd Font
     style: Bold Italic
 
   # Point size
@@ -142,8 +142,8 @@ font:
   #use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
-#draw_bold_text_with_bright_colors: false
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
+# draw_bold_text_with_bright_colors: true
 
 # COLOR SCHEMES
 schemes:
