--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -6,6 +6,6 @@ disabled = false
 
 # Replace the "❯" symbol in the prompt with "➜"
 [character]
-success_symbol = "[➜](bold green)"
-error_symbol = "[➜](bold red)"
-vicmd_symbol = "[V](bold green)"
+# success_symbol = "[➜](bold green)"
+# error_symbol = "[➜](bold red)"
+# vicmd_symbol = "[V](bold green)"
