--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -62,8 +62,7 @@ set $secondMonitor DP-1-0
 # exec --no-startup-id xrandr --output $firstMonitor --mode 1920x1080 --primary --auto
 # exec --no-startup-id xrandr --output $secondMonitor --mode 2560x1080 --noprimary --right-of $firstMonitor --auto
 # 4k screen
-exec --no-startup-id xrandr --output $firstMonitor --mode 3840x2160 --primary --auto
-exec --no-startup-id xrandr --output $secondMonitor --mode 3840x2160 --rate 60 --noprimary --right-of $firstMonitor
+exec --no-startup-id xrandr --output $firstMonitor --mode 3840x2160 --primary --output $secondMonitor --mode 3840x2160 --rate 60 --noprimary --right-of $firstMonitor
 # Use --scale 2x2 for no 4k displays
 
 
