--- a/optimus-manager/optimus-manager.conf
+++ b/optimus-manager/optimus-manager.conf
@@ -49,14 +49,14 @@ startup_mode=auto
 startup_auto_battery_mode=hybrid
 # GPU mode to select when startup_mode=auto and the computer is running on external power.
 # Possible values: nvidia, integrated, hybrid, intel (deprecated, equivalent to integrated)
-startup_auto_extpower_mode=hybrid
+startup_auto_extpower_mode=nvidia
 
 
 [intel]
 
 # Driver to use for the Intel GPU. Possible values : modesetting, intel
 # To use the intel driver, you need to install the package "xf86-video-intel".
-driver=modesetting
+driver=intel
 
 # Acceleration method (corresponds to AccelMethod in the Xorg configuration).
 # Only applies to the intel driver.
@@ -68,7 +68,7 @@ accel=
 # Only applies to the intel driver.
 # Possible values : yes, no
 # Leave blank for the default (no option specified)
-tearfree=
+tearfree=yes
 
 # DRI version. Possible values : 2, 3
 DRI=3
@@ -83,13 +83,13 @@ modeset=yes
 
 # Driver to use for the AMD GPU. Possible values : modesetting, amdgpu
 # To use the amdgpu driver, you need to install the package "xf86-video-amdgpu".
-driver=modesetting
+driver=amdgpu
 
 # Enable TearFree option in the Xorg configuration.
 # Only applies to the amdgpu driver.
 # Possible values : yes, no
 # Leave blank for the default (no option specified)
-tearfree=
+tearfree=yes
 
 # DRI version. Possible values : 2, 3
 DRI=3
