--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -52,11 +52,11 @@ floating_maximum_size 1000x800
 bindsym $mod+p move workspace to output right
 
 # Nvidia only for extra performance
-# set $firstMonitor eDP-1-1
-# set $secondMonitor DP-0
+set $firstMonitor eDP-1-0
+set $secondMonitor DP-0
 # Hybrid
-set $firstMonitor eDP
-set $secondMonitor DP-1-0
+# set $firstMonitor eDP
+# set $secondMonitor DP-1-0
 
 # 4k screen
 exec --no-startup-id xrandr --output $firstMonitor --auto --primary --output $secondMonitor --auto --right-of $firstMonitor
