--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,7 +7,7 @@
 	ui = true
 [core]
 	autocrlf = input
-	editor = nvim
+	editor = vim
 	safecrlf = true
 [alias]
 	ci = commit
@@ -30,9 +30,5 @@
 [merge]
     tool = vimdiff
     conflictstyle = diff3
-[mergetool "vimdiff"]
-	path = nvim -d
-[mergetool]
-	path = nvim
 [pull]
 	rebase = true
