--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -4,6 +4,9 @@ add_newline = false
 [line_break]
 disabled = false
 
+[gcloud]
+disabled = true
+
 # Replace the "❯" symbol in the prompt with "➜"
 [character]
 # success_symbol = "[➜](bold green)"
