--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -646,48 +646,48 @@ font_size        16.0
 
 #: Color scheme {{{
 
- # DOOM ONE
-foreground #bbc2cf
-background #282c34
-
-background_opacity 0.9
-
-#: black
-color0 #1c1f24
-color8 #5b6268
-
-#: red
-color1 #ff6c6b
-color9 #da8548
-
-#: green
-color2  #98be65
-color10 #4db5bd
-
-#: yellow
-
-color3  #da8548
-color11 #ecbe7b
-
-#: blue
-
-color4  #51afef
-color12 #3071db
-
-#: magenta
-
-color5  #c678dd
-color13 #a9a1e1
-
-#: cyan
-
-color6  #5699af
-color14 #46d9ff
-
-#: white
-
-color7  #dfdfdf
-color15 #f8f8f2
+#  # DOOM ONE
+# foreground #bbc2cf
+# background #282c34
+#
+# background_opacity 0.9
+#
+# #: black
+# color0 #1c1f24
+# color8 #5b6268
+#
+# #: red
+# color1 #ff6c6b
+# color9 #da8548
+#
+# #: green
+# color2  #98be65
+# color10 #4db5bd
+#
+# #: yellow
+#
+# color3  #da8548
+# color11 #ecbe7b
+#
+# #: blue
+#
+# color4  #51afef
+# color12 #3071db
+#
+# #: magenta
+#
+# color5  #c678dd
+# color13 #a9a1e1
+#
+# #: cyan
+#
+# color6  #5699af
+# color14 #46d9ff
+#
+# #: white
+#
+# color7  #dfdfdf
+# color15 #f8f8f2
 
  # Kanagawa
 # background #1F1F28
@@ -704,15 +704,15 @@ color15 #f8f8f2
 # inactive_tab_foreground #727169
 # #tab_bar_background #15161E
 
-# # normal
-# color0 #090618
-# color1 #C34043
-# color2 #76946A
-# color3 #C0A36E
-# color4 #7E9CD8
-# color5 #957FB8
-# color6 #6A9589
-# color7 #C8C093
+# normal
+color0 #090618
+color1 #C34043
+color2 #76946A
+color3 #C0A36E
+color4 #7E9CD8
+color5 #957FB8
+color6 #6A9589
+color7 #C8C093
 
 # # bright
 # color8  #727169
