--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -649,47 +649,47 @@ font_size        16.0
 #  # DOOM ONE
 # foreground #bbc2cf
 # background #282c34
-#
+
 # background_opacity 0.9
-#
+
 # #: black
 # color0 #1c1f24
 # color8 #5b6268
-#
-# #: red
+
+# : red
 # color1 #ff6c6b
 # color9 #da8548
-#
-# #: green
+
+#: green
 # color2  #98be65
 # color10 #4db5bd
-#
-# #: yellow
-#
+
+#: yellow
+
 # color3  #da8548
 # color11 #ecbe7b
-#
-# #: blue
-#
+
+#: blue
+
 # color4  #51afef
 # color12 #3071db
-#
-# #: magenta
-#
+
+#: magenta
+
 # color5  #c678dd
 # color13 #a9a1e1
-#
-# #: cyan
-#
+
+#: cyan
+
 # color6  #5699af
 # color14 #46d9ff
-#
-# #: white
-#
+
+#: white
+
 # color7  #dfdfdf
 # color15 #f8f8f2
 
- # Kanagawa
+# Kanagawa
 # background #1F1F28
 # foreground #DCD7BA
 # selection_background #2D4F67
@@ -705,14 +705,14 @@ font_size        16.0
 # #tab_bar_background #15161E
 
 # normal
-color0 #090618
-color1 #C34043
-color2 #76946A
-color3 #C0A36E
-color4 #7E9CD8
-color5 #957FB8
-color6 #6A9589
-color7 #C8C093
+# color0 #090618
+# color1 #C34043
+# color2 #76946A
+# color3 #C0A36E
+# color4 #7E9CD8
+# color5 #957FB8
+# color6 #6A9589
+# color7 #C8C093
 
 # # bright
 # color8  #727169
@@ -1043,7 +1043,7 @@ color7 #C8C093
 #: on both light and dark backgrounds. WARNING: this might make your
 #: mouse cursor invisible on dual GPU machines.
 
-# linux_display_server auto
+linux_display_server x11
 
 #: Choose between Wayland and X11 backends. By default, an appropriate
 #: backend based on the system state is chosen automatically. Set it
