--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -32,5 +32,5 @@
     conflictstyle = diff3
 [pull]
 	rebase = true
-[url "git@github.com:"]
-	insteadOf = https://github.com/
+[url "git@github.com:goflink"]
+	insteadOf = https://github.com/goflink
