--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -168,7 +168,7 @@ bindcode $mod+Shift+90 	 move container to workspace  $ws10
 ######################################
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id wezterm
+bindsym $mod+Return exec --no-startup-id kitty
 
 # kill focused window
 bindsym $mod+q kill
@@ -354,7 +354,7 @@ exec --no-startup-id blueberry-tray
 
 #transparency 
 #exec --no-startup-id xcompmgr -c -C -t-5 -l-5 -r4.2 -o.55 &
-exec --no-startup-id picom -CGb
+# exec --no-startup-id picom -CGb
 
 #networkmanager-applet
 exec --no-startup-id nm-applet
