--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -11,3 +11,14 @@ command = "codelldb"
 name = "codelldb"
 port-arg = "--port {}"
 transport = "tcp"
+
+[[language.debugger.templates]]
+name = "binary"
+request = "launch"
+[[language.debugger.templates.completion]]
+completion = "filename"
+name = "binary"
+
+[language.debugger.templates.args]
+program = "{0}"
+runInTerminal = true
