--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,7 +14,8 @@ set -s escape-time 0
 set-option -g focus-events on
 set -g base-index 1
 setw -g pane-base-index 1
-set -g default-terminal "tmux-256color"
+set -g default-terminal screen-256color
+# set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 bind-key -r S run-shell "tmux new-session -d"
