--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -22,3 +22,14 @@ name = "binary"
 [language.debugger.templates.args]
 program = "{0}"
 runInTerminal = true
+
+[[language]]
+name = "odin"
+scope = "scope.odin"
+file-types = ["odin"]
+comment-token = "//"
+indent = { tab-width = 2, unit = " " }
+language-server = { command = "ols" }
+injection-regex = "odin"
+roots = ["ols.json"]
+formatter = { command = "odinfmt", args = [ "-stdin", "true" ] }
