--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 nvim/.config/nvim/lazy-lock.json
 nvim/.config/nvim/time.txt
 fish/.config/fish/fish_variables
+nushell/.config/nushell/history.txt
 bin/.local/bin/codelldb
