nu scripts and reorder

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -9,6 +9,7 @@ disabled = true
 
 # Replace the "❯" symbol in the prompt with "➜"
 [character]
+disabled = true
 # success_symbol = "[➜](bold green)"
 # error_symbol = "[➜](bold red)"
 # vicmd_symbol = "[V](bold green)"
