--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -8,7 +8,7 @@ unbind %
 bind r source-file ~/.config/tmux/tmux.conf
 
 # Options
-set -g default-command ~/.cargo/bin/nu
+set -g default-command "~/.cargo/bin/nu -l"
 set -g mouse on
 set -g status-style 'bg=#333333 fg=#5eacd3'
 set -s escape-time 50
