--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-bind v split-window -h
-bind s split-window -v
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 bind r source-file ~/.config/tmux/tmux.conf
@@ -33,8 +33,3 @@ bind h select-pane -L
 bind l select-pane -R
 bind j select-pane -D
 bind k select-pane -U
-
-# shortcut for moving tmux buffer to clipboard
-# useful if you've selected with the mouse
-bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
-
