--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,7 +11,8 @@ bind r source-file ~/.config/tmux/tmux.conf
 set -g default-command "~/.cargo/bin/nu -l"
 set -g mouse on
 set -g status-style 'bg=#333333 fg=#5eacd3'
-set -s escape-time 50
+set -s escape-time 0
+set -g history-limit 50000
 set-option -g focus-events on
 set -g base-index 1
 setw -g pane-base-index 1
