--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ nvim/.config/nvim/lazy-lock.json
 nvim/.config/nvim/time.txt
 fish/.config/fish/fish_variables
 nushell/.config/nushell/history.txt
+tmux/.config/tmux/plugins
 bin/.local/bin/codelldb
