--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,36 +1,52 @@
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-bind v split-window -h -c "#{pane_current_path}"
-bind s split-window -v -c "#{pane_current_path}"
-unbind '"'
-unbind %
-bind r source-file ~/.config/tmux/tmux.conf
-
-# Options
-set -g default-command "~/.cargo/bin/nu -l"
+set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
-set -g status-style 'bg=#333333 fg=#5eacd3'
-set -s escape-time 0
-set -g history-limit 50000
-set-option -g focus-events on
-set -g base-index 1
-setw -g pane-base-index 1
-set -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
 
-bind-key -r S run-shell "tmux new-session -d"
-bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
 
-# VIM mode
-set -g mode-keys vi
-
-unbind -T copy-mode-vi MouseDragEnd1Pane
-bind -T copy-mode-vi v send -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard &> /dev/null'
-bind -T copy-mode-vi Enter send-keys -X cancel
-
+# Vim style pane selection
 bind h select-pane -L
-bind l select-pane -R
-bind j select-pane -D
+bind j select-pane -D 
 bind k select-pane -U
+bind l select-pane -R
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
+# Shift Alt vim keys to switch windows
+bind -n M-H previous-window
+bind -n M-L next-window
+set -g default-command "/opt/homebrew/bin/nu -l"
+
+set -g @catppuccin_flavour 'mocha'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.config/tmux/plugins/tpm/tpm'
+
+# set vi-mode
+set-window-option -g mode-keys vi
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
