--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -30,7 +30,7 @@ bind -n S-Right next-window
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
-set -g default-command "~/.cargo/bin/nu -l"
+# set -g default-command "~/.cargo/bin/nu -l"
 
 set -g @catppuccin_flavour 'mocha'
 
