--- a/helix/.config/helix/config.toml
+++ b/helix/.config/helix/config.toml
@@ -15,19 +15,11 @@ insert = "bar"
 hidden = false
 
 [keys.normal]
-# Quick iteration on config changes
-C-o = ":config-open"
-C-r = ":config-reload"
-
 # Some nice Helix stuff
 C-h = "select_prev_sibling"
 C-j = "shrink_selection"
 C-k = "expand_selection"
 C-l = "select_next_sibling"
-
-# Personal preference
-o = ["open_below", "normal_mode"]
-O = ["open_above", "normal_mode"]
 
 # Muscle memory
 "{" = ["goto_prev_paragraph", "collapse_selection"]
@@ -50,12 +42,12 @@ P = ["paste_clipboard_before", "collapse_selection"]
 Y = ["extend_to_line_end", "yank_main_selection_to_clipboard", "collapse_selection"]
 
 # Uncanny valley stuff, this makes w and b behave as they do Vim
-w = ["move_next_word_start", "move_char_right", "collapse_selection"]
-W = ["move_next_long_word_start", "move_char_right", "collapse_selection"]
-e = ["move_next_word_end", "collapse_selection"]
-E = ["move_next_long_word_end", "collapse_selection"]
-b = ["move_prev_word_start", "collapse_selection"]
-B = ["move_prev_long_word_start", "collapse_selection"]
+# w = ["move_next_word_start", "move_char_right", "collapse_selection"]
+# W = ["move_next_long_word_start", "move_char_right", "collapse_selection"]
+# e = ["move_next_word_end", "collapse_selection"]
+# E = ["move_next_long_word_end", "collapse_selection"]
+# b = ["move_prev_word_start", "collapse_selection"]
+# B = ["move_prev_long_word_start", "collapse_selection"]
 
 # If you want to keep the selection-while-moving behaviour of Helix, this two lines will help a lot,
 # especially if you find having text remain selected while you have switched to insert or append mode
@@ -64,7 +56,7 @@ B = ["move_prev_long_word_start", "collapse_selection"]
 # But if you really want to get familiar with the Helix way of selecting-while-moving, comment the
 # bindings for 'w', 'e', and 'b' out and leave the bindings for 'i' and 'a' active below. A world of difference!
 i = ["insert_mode", "collapse_selection"]
-a = ["append_mode", "collapse_selection"]
+# a = ["append_mode", "collapse_selection"]
 
 # Undoing the 'd' + motion commands restores the selection which is annoying
 u = ["undo", "collapse_selection"]
