--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -33,3 +33,20 @@ language-servers = [ "ols" ]
 injection-regex = "odin"
 roots = ["ols.json"]
 auto-format = true
+
+[[language]]
+name = "swift"
+scope = "source.swift"
+injection-regex = "swift"
+file-types = ["swift", "objective-c", "objective-cpp"]
+indent = { tab-width = 4, unit = " " }
+roots = [ "Package.swift" ]
+comment-token = "//"
+# auto-format = true
+language-servers = [ "sourcekit-lsp" ]
+# Assumes that all cole is in Sources, and format all the project, not ideal
+# formatter = { command = "swift-format", args = ["Sources/", "--recursive", "-i" ] }
+
+[[grammar]]
+name = "swift"
+source = { git = "https://github.com/alex-pinkus/tree-sitter-swift", rev = "f1a48a33a7ceaf8817f7a340ea4ef1b549ffa176" }
