--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -32,7 +32,14 @@ bind -n M-H previous-window
 bind -n M-L next-window
 # set -g default-command "~/.cargo/bin/nu -l"
 
-set -g @catppuccin_flavour 'mocha'
+# Catpuccin config
+set -g @catppuccin_window_status_enable "yes"
+set -g @catppuccin_window_status_icon_enable "yes"
+set -g @catppuccin_icon_window_zoom "󰁌"
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -40,6 +47,7 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 run '~/.config/tmux/plugins/tpm/tpm'
+
 
 # set vi-mode
 set-window-option -g mode-keys vi
