--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -46,9 +46,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-run '~/.config/tmux/plugins/tpm/tpm'
-
-
 # set vi-mode
 set-window-option -g mode-keys vi
 # keybindings
@@ -58,3 +55,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
+
+# For first time
+# git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm
+run '~/.config/tmux/plugins/tpm/tpm'
