--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -58,4 +58,5 @@ bind v split-window -h -c "#{pane_current_path}"
 
 # For first time
 # git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm
+# cd ~/.config/tmux/plugins && ./tpm/scripts/install_plugins.sh
 run '~/.config/tmux/plugins/tpm/tpm'
