--- a/.ideavimrc
+++ b/.ideavimrc
@@ -10,49 +10,50 @@ set showmode
 
 let mapleader = "\<Space>"
 
-nnoremap ; :
+map ; :
 " Jump to start and end of line using the home row keys
 map H ^
 map L $
 
 " <leader><leader> toggles between buffers
-nnoremap <leader><leader> :action GoToLastTab<CR>
+map <leader><leader><Action>(GoToLastTab)
 
 " delete without yanking
-nnoremap <leader>d "_d
-vnoremap <leader>d "_d
+map <leader>d "_d
+vmap <leader>d "_d
 
 " replace currently selected text with default register
 " without yanking it
-vnoremap <leader>p "_dP
+vmap <leader>p "_dP
 
 " copy and paste to clipboard
-nnoremap <leader>y "+y
-vnoremap <leader>y "+y
-vnoremap <leader>pp "+gP
-nnoremap <leader>pp "+gP
+map <leader>y "+y
+vmap <leader>y "+y
+vmap <leader>pp "+gP
+map <leader>pp "+gP
 
 " <leader><leader> toggles between buffers
-nnoremap <leader><leader> <F12>
+map <leader><leader> <F12>
 
 " Move by line
-nnoremap j gj
-nnoremap k gk
+map j gj
+map k gk
 
 
-nnoremap gd :action GotoDeclaration<CR>
-nnoremap gi :action GotoImplementation<CR>
-nnoremap gr :action FindUsages<CR>
-nnoremap <leader>cc :action CommentByLineComment<CR>
-vnoremap <leader>cc :action CommentByLineComment<CR>
-nnoremap <leader>a :action ShowIntentionActions<CR>
-nnoremap <leader>rn :action RenameElement<CR>
-nnoremap <leader>fr :action ReformatCode<CR>
-nnoremap <leader><TAB> :action FileStructurePopup<CR>
-nnoremap <silent> [d :action GotoPreviousError<CR>
-nnoremap <silent> ]d :action GotoNextError<CR>
+map <leader>k <Action>(ShowHoverInfo)
+map gd <Action>(GotoDeclaration)
+map gi <Action>(GotoImplementation)
+map gr <Action>(FindUsages)
+map <leader>/ <Action>(CommentByLineComment)
+vmap <leader>/ <Action>(CommentByLineComment)
+map <leader>la <Action>(ShowIntentionActions)
+map <leader>lr <Action>(RenameElement)
+map <leader>lf <Action>(ReformatCode)
+map <leader><TAB> <Action>(FileStructurePopup)
+map <silent> [d <Action>(GotoPreviousError)
+map <silent> ]d <Action>(GotoNextError)
 
 
-nnoremap <leader>ff :action GotoFile<CR>
-nnoremap <leader>fg :action FindInPath<CR>
-nnoremap <leader>fb :action Switcher<CR>
+map <leader>ff <Action>(GotoFile)
+map <leader>fg <Action>(FindInPath)
+map <leader>fb <Action>(Switcher)
